PR "single-tactic-mode"
* converter.ts - add copypaste output (for llms)

* indexBrowser.tsx - remove legacy `state.idsOutsideViewport`

* BetterParser.lean - renamed variables

* BetterParser.lean - refactor flattening + panic lines

* BetterParser.lean - factor out postNode()

* lean - add "before_after" mode

* everywhere - add "isSingleTacticMode" setting

* css - make single-tactic-mode proof fill up 100% of the screen

* <ContextMenu/> - remove some settings for .isSingleTacticMode

* extension - put all settings handling into Settings.ts; refetch the proof tree on settings change

* <HypothesisNode/> - use prettified hyp name

* <HypothesisNode/> - make it possible to hide hypotheses

* css - experimental UI: place green hyps one after another

* css - in single-tactic mode, highlight hyp instead of showing arrows

* lean - theorems works

* implicitArgs, explicitArgs, body works

* makes convert work but with 49 theorems

* works!!!

* lean - factor out "GetTheoremsUsedInTactic"

* shorter

* lean - refactor findTheoremsInTacticRange()

* lean - use `guard` instead of if-else

* lean - move .theorems field into .steps

* app - pass .theorems to the ConvertedProofTree

* app - make theorems render

* GetTheoremsUsedInTactic.lean - remove duplcation

* <Box/> - make theorem-click not move the box

* <TacticNodeForHypothesis/> - removed pink highlights, made theorem render nicely

* GetTheorems.lean - fix "fvar expected" exceptions

* <TacticNode/> - ignore @ in theorem names

* <TacticNode/> - shorten long _hyg hyp names, return _ instead

* GetTheorems.lean - return all theorems we can find

* css - make theorem hyps work on small screens

* GetTheorems.lean - add .declType and .declBody

* lean - rename GetTheoremsUsedInTactic => GetTheorems

* temp

* rename body to type

* render defs

* types.ts - fix types

* converter.ts - factor out `logProofTreeForDebugging()`

* /services/DependsOnUI.ts - display data-hyp .dependsOn too (in single-tactic mode)

* ser

--- a/extension/package.json
+++ b/extension/package.json
@@ -63,6 +63,16 @@
           "default": false,
           "description": "Enable compact mode for proof display"
         },
+        "paperproof.areHypsHighlighted": {
+          "type": "boolean",
+          "default": false,
+          "description": "In all hypothesis and goal nodes, marks referenced hypothesis names"
+        },
+        "paperproof.isSingleTacticMode": {
+          "type": "boolean",
+          "default": false,
+          "description": "Switch between a proof-tree mode and a single-tactic mode"
+        },
         "paperproof.isCompactTactics": {
           "type": "boolean",
           "default": false,
