lakefile.lean - update mathlib version to match our new lean

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "f897ebcf72cd16f89ab4577d0c826cd14afaafc7",
+   "rev": "a77a0aeac5e8e691c32a65b878b02574930b5f90",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.24.0",
+   "inputRev": "master",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"type": "path",
@@ -22,7 +22,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "dfd06ebfe8d0e8fa7faba9cb5e5a2e74e7bd2805",
+   "rev": "b949552f6ca8e223f424b3e3b33f74185bbf1179",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -72,7 +72,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "dea6a3361fa36d5a13f87333dc506ada582e025c",
+   "rev": "2676cb5599c12c434daac781e2cea44e8105fc41",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
