--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@gradio/client": "^1.5.0",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/material": "^5.15.1",
+    "monaco-editor": "^0.54.0",
     "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
