--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@mui/material": "^5.15.1",
     "monaco-editor": "^0.54.0",
+    "monaco-themes": "^0.4.7",
     "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
